--- a/geocoder.ipynb
+++ b/geocoder.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br><div align = \"center\"> <font size=8>Geocoderによる固有名詞の空間情報抽出</div></font><br>\n",
-    "<div align = \"right\"><font size=6> 2017/12/23</div></font><br>\n",
-    "<div align=\"right\"><font size=6> Kota Dohi </div></font>"
+    "<br><div align = \"center\"> <font size=\"8\">Geocoderによる固有名詞の空間情報抽出</div></font><br>\n",
+    "<div align = \"right\"><font size=\"6\"> 2017/12/23</div></font><br>\n",
+    "<div align=\"right\"><font size=\"6\"> Kota Dohi </div></font>"
    ]
   },
   {
